2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* 24x24/apps/Makefile.am:
	* 48x48/apps/Makefile.am:
	* */apps/administration.png:
	* */apps/advanced-directory.png:
	* */apps/apacheconf.png:
	* */apps/boot.png:
	* */apps/character-picker.png:
	* */apps/config-*.png:
	* */apps/disks.png:
	* */apps/evolution-*.png:
	* */apps/gdm.png:
	* */apps/gnome-amusements.png:
	* */apps/gnome-audio.png:
	* */apps/gnome-cpu.png:
	* */apps/gnome-desktop-config.png:
	* */apps/gnome-favorites.png:
	* */apps/gnome-finance.png:
	* */apps/gnome-mini-commander.png:
	* */apps/gnome-networktool.png:
	* */apps/gnome-status.png:
	* */apps/hwbrowser.png:
	* */apps/network-config.png:
	* */apps/ooo_*.png:
	* */apps/postscript-viewer.*:
	* */apps/serviceconf.png:
	* */apps/shares.png:
	Remove some more deprecated icons
	
2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* Makefile.am:
	Remove the intltool scripts bits, as new intltool uses installed copies

	* configure.in:
	Up the intltool requirement to 0.40.0
	Update the devel version check and add an --enable-icon-mapping
	argument to configure for forcing the use of symlinks for packagers

2008-06-15  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up version to 2.23.1 for release

2008-06-15  Lapo Calamandrei  <calamandrei@gmail.com>

	* {16x16,22x22,24x24}/actions/zoom* : redone in svg.
	* 8x8/emblems/emblem-default* : made more consistent with the rest.
	
2008-06-14  Rodney Dawes  <dobey.pwns@gmail.com>

	* configure.in:
	Up the icon-naming-utils requirement to 0.8.7 (#523707)
	Remove 48x48/emblems/Makefile from AC_OUTPUT

	Fixes #523707

2008-06-14  Rodney Dawes  <dobey.pwns@gmail.com>

	* 48x48/animations/Makefile.am:
	Use ln -sf for installing the symlink for gnome-searchtool animation

	Fixes #538295

2008-06-12  Andreas Nilsson  <andreas@andreasn.se>

	* {16x16,22x22,24x24,32x32,scalable}/mimetypes/x-office-presentation.*:
	new icon by Lapo Calamandrei and Hylke Bons

2008-06-12  Rodney Dawes  <dobey.pwns@gmail.com>
