@@ -9,7 +9,6 @@ icons_DATA =				\
 	accessories-dictionary.png	\
 	accessories-text-editor.png	\
 	applets-screenshooter.png	\
-	gnome-shutdown.png		\
 	help-browser.png		\
 	im-aim.png			\
 	im-icq.png			\
