@@ -8,7 +8,6 @@ icons_DATA =				\
 	accessories-character-map.svg	\
 	accessories-dictionary.svg	\
 	accessories-text-editor.svg	\
-	gnome-shutdown.svg		\
 	help-browser.svg		\
 	im-aim.svg			\
 	im-icq.svg			\
